# freertos-socfpga

./: .gitmodules  CMakeLists.txt  Makefile  README.md  lscript.ld
.githooks/: pre-commit
FreeRTOS/: CMakeLists.txt
FreeRTOS/Demo/SOCFPGA/: FreeRTOSConfig.h
FreeRTOS/Demo/SOCFPGA/apps/hello_world/: CMakeLists.txt  hello_world.c
FreeRTOS/Demo/SOCFPGA/apps/samples/Common/Minimal/: AbortDelay.c  TimerDemo.c
FreeRTOS/Demo/SOCFPGA/apps/samples/cli_app/: cli_spi.c  main.c
FreeRTOS/Demo/SOCFPGA/apps/samples/main_blinky/: main.c
FreeRTOS/Demo/SOCFPGA/apps/samples/main_freertosplus_basic/: main.c
FreeRTOS/Demo/SOCFPGA/apps/samples/main_full/: main.c
FreeRTOS/Demo/SOCFPGA/startup/: cpu_init.S  setup_pagetable.c
FreeRTOS/FreeRTOS-Plus/Source/portable/NetworkInterface/SOCFPGA/: NetworkInterface.c
FreeRTOS/portable/GCC/ARM_AARCH64/: CMakeLists.txt  heap_3_extra.c  port.c  portASM.S  portSocfpga.c  portStandardLib.c  portmacro.h
drivers/: CMakeLists.txt
drivers/bridge/: socfpga_bridge.h
drivers/clk_mngr/: socfpga_clk_mngr_reg.h
drivers/common/: CMakeLists.txt  socfpga_defines.h  socfpga_platform.c  socfpga_platform.h
drivers/console/: CMakeLists.txt  socfpga_console.c  socfpga_console.h
drivers/dma/: socfpga_dma.c  socfpga_dma.h
drivers/ecc/: socfpga_ecc.c  socfpga_ecc.h
drivers/ethernet/: socfpga_xgmac.c  socfpga_xgmac.h  socfpga_xgmac_phy.c  socfpga_xgmac_phy_ll.c
drivers/fcs/: socfpga_fcs.c  socfpga_fcs.h  socfpga_fcs_ll.h
drivers/fpga_manager/: socfpga_fpga_manager.h  socfpga_freeze_ip.h
drivers/gic/: CMakeLists.txt  arm_gic.c  arm_gic.h  arm_gic_reg.c  arm_gic_reg.h  arm_gic_registers.h  socfpga_gic.c  socfpga_gic_reg.c  socfpga_interrupt.c  socfpga_interrupt.h
drivers/gpio/: socfpga_gpio.c  socfpga_gpio.h  socfpga_gpio_reg.h
drivers/i2c/: socfpga_i2c.c  socfpga_i2c.h  socfpga_i2c_ll.c  socfpga_i2c_ll.h  socfpga_i2c_reg.h
drivers/i3c/: CMakeLists.txt  socfpga_i3c.c  socfpga_i3c.h  socfpga_i3c_ll.c  socfpga_i3c_ll.h
drivers/iossm/: socfpga_iossm.c  socfpga_iossm.h  socfpga_iossm_ll.c  socfpga_iossm_ll.h
drivers/qspi/: socfpga_flash.c  socfpga_flash.h  socfpga_flash_adapter.h  socfpga_qspi.h
drivers/reboot_mngr/: socfpga_reboot_mngr.h
drivers/sdm_mailbox/: socfpga_mbox_client.c  socfpga_mbox_client.h  socfpga_sip_handler.c  socfpga_sip_handler.h
drivers/sdmmc/: socfpga_sdmmc.c  socfpga_sdmmc.h  socfpga_sdmmc_ll.c  socfpga_sdmmc_ll.h
drivers/seu/: socfpga_seu.c  socfpga_seu.h
drivers/smmu/: socfpga_smmu.c  socfpga_smmu.h
drivers/spi/: socfpga_spi.c  socfpga_spi.h  socfpga_spi_ll.c  socfpga_spi_ll.h  socfpga_spi_reg.h
drivers/sys_mngr/: socfpga_sys_mngr_reg.h
drivers/timer/: socfpga_timer.c  socfpga_timer.h
drivers/uart/: socfpga_uart.c  socfpga_uart.h  socfpga_uart_ll.c  socfpga_uart_ll.h
drivers/usb3/dwc3/: dwc3.c  dwc3.h  dwc3_ll.h
drivers/usb3/host/: xhci.c  xhci.h  xhci_cap.c  xhci_context.c  xhci_events.c  xhci_rings.c  xhci_rings.h
drivers/usb_otg/: socfpga_usb_otg_reg.h
drivers/wdt/: socfpga_watchdog.c  socfpga_watchdog.h
fcs/portable/: libfcs_osal.c
osal/freertos/: osal.h
rsu/: CMakeLists.txt
rsu/portable/dependency/: rsu_crc32_def.c  rsu_mailbox_ops.c  rsu_misc_ops.c
samples/: README.md
samples/bridge/: CMakeLists.txt  bridge_sample.c  main.c
samples/common/: download_dep.cmake
samples/dma/: dma_sample.c  main.c
samples/ecc/: ecc_sample.c  main.c
samples/fatfs/: main.c
samples/fcs/: main.c
samples/fpga_manager/: CMakeLists.txt  main.c
samples/gpio/: main.c
samples/i2c/: CMakeLists.txt  i2c_dma_sample.c  i2c_sample.c  i2c_slave_dma_sample.c  i2c_slave_sample.c  main.c
samples/i3c/: main.c
samples/iossm/: iossm_sample.c  main.c
samples/multithread_samples/: CMakeLists.txt  main.c
samples/qspi/: main.c
samples/reboot_mngr/: main.c
samples/rsu/: CMakeLists.txt  README.md  main.c
samples/rsu/common/: download_dep.cmake
samples/rsu/rsu_ddr/: CMakeLists.txt  readme.md  rsu_sample.c
samples/rsu/rsu_qspi/: CMakeLists.txt  initial_image.pfg  readme.md  rsu_sample.c
samples/rsu/rsu_sdcard/: CMakeLists.txt  rsu_sample.c
samples/sdm_mailbox/: main.c  sdm_mbox_sample.c
samples/sdmmc/: main.c
samples/seu/: CMakeLists.txt  main.c
samples/spi/: CMakeLists.txt  main.c  spi_sample.c  spi_sample_dma.c  spi_slave_dma_sample.c  spi_slave_sample.c
samples/timer/: main.c
samples/uart/: main.c
samples/usb3/: CMakeLists.txt  main.c
samples/usb_otg/: main.c
samples/wdt/: main.c
tools/: README.md  apply_smp_patch.cmake  host_check.cmake  smp.patch  socfpga_build.cmake  target_socfpga.cmake  win_helper.cmake
tools/hooks/: check_copyright_years.py
